src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Bio__c</fullName>
        <label>Bio</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Medical_Professionals</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>Middle_Name__c</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Specialty__c</columns>
        <columns>Bio__c</columns>
        <columns>Comments__c</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Medical_Professional</value>
        </filters>
        <label>Medical Professionals</label>
    </listViews>
    <recordTypes>
        <fullName>Medical_Professional</fullName>
        <active>true</active>
        <label>Medical Professional</label>
    </recordTypes>
</CustomObject>